src/objects/Queue_Lead_Notification__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Chatter_Group_ID__c</fullName>
        <label>Chatter Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Name__c</fullName>
        <label>Chatter Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Queue Lead Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Queue_Name__c</columns>
        <columns>Chatter_Group_ID__c</columns>
        <columns>Chatter_Group_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>